predictDistributed with aggregation of results (should now work)
